--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
 	<link rel="stylesheet" type="text/css" href="style2.css">
-	<title>Page startup Exercise</title>
+	<title>Github  startup Exercise</title>
 </head>
 <body>
 	<header class="startup text-center text-whit d-flex">
