--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<div class="response" id="mce-error-response" style="display:none"></div>
 		<div class="response" id="mce-success-response" style="display:none"></div>
 	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_ea2aeef4f65933ed85cd57528_6648ee29e3" tabindex="-1" value=""></div>
+    <!-- <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_ea2aeef4f65933ed85cd57528_6648ee29e3" tabindex="-1" value=""></div> -->
         <div class="optionalParent">
             <div class="clear">
                 <input class="btn btn-primary btn-x1" type="submit" value="Find Out More" name="subscribe" id="mc-embedded-subscribe" class="button">
