--- a/index.html
+++ b/index.html
@@ -41,21 +41,22 @@
 	<!-- <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
 </label> -->
 	<!-- <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" required> -->
-	<span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
+	<!-- <span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span> -->
 </div>
 	<div id="mce-responses" class="clear foot">
 		<div class="response" id="mce-error-response" style="display:none"></div>
 		<div class="response" id="mce-success-response" style="display:none"></div>
 	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <!-- <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_ea2aeef4f65933ed85cd57528_6648ee29e3" tabindex="-1" value=""></div> -->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_ea2aeef4f65933ed85cd57528_6648ee29e3" tabindex="-1" value=""></div>
         <div class="optionalParent">
-            <div class="clear">
+            <div class="clear foot">
                 <input class="btn btn-primary btn-x1" type="submit" value="Find Out More" name="subscribe" id="mc-embedded-subscribe" class="button">
                 <!-- <p class="brandingLogo"><a href="http://eepurl.com/h-T7rD" title="Mailchimp - email marketing made easy and fun"><img src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a></p> -->
             </div>
         </div>
     </div>
 </form>
+</div>
 </div>
 <!-- <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[4]='PHONE';ftypes[4]='phone';fnames[6]='MMERGE6';ftypes[6]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
  --><!--End mc_embed_signup-->
